--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,17 +1,23 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 08.12.2024 13:43:54</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 09.12.2024 06:03:18</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar s nudlemi a zeleninou</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Gulášová</td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky </h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar s nudlemi a zeleninou</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Cibulový krém s krutony</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Italská tomatová s parmazánem </td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Pečené masové čevabčiči, vařené brambory s máslem a šnitlíkem, cibule, hořčice</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">169,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí roštěná na houbách, dušená jasmínová rýže</td><td class="menuPrice">177,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřové výpečky, bramborové knedlíky maštěné cibulkou, bílé zelí</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava: 150g Steak z kuřecích prsou zapečený sýrem a zeleným chřestem, brokolicové pyré s máslem, grilované rajče s parmazánem</td><td class="menuPrice">189,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené žampiony, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">157,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Sleduješ náš instagram senkyrna7? Tak dnes využij svou slevu na: 0,04L Vodka Finlandia za pouhých 31,-Kč</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Vinná klobása na grilu, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">300g</td><td class="menuName">Steak z vepřové kotlety bez kosti na smetanové omáčce s barevným pepřem, hranolky</td><td class="menuPrice">210,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů se zeleninou promíchaný česnekovým dresinkem, smažené kuřecí stripsy, vařené vejce</td><td class="menuPrice">162,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Qusadilla plněný sýrem, trhaným vepřovým masem, anglickou slaninou, jalapeños a kukuřicí, hranolky, česnekový dip</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Znojemská hovězí pečeně, kynuté houskové knedlíky</td><td class="menuPrice">169,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuřecí nudličky na paprice, těstoviny</td><td class="menuPrice">162,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava: 150g Medailonky z vepřové panenky na fazolových luskách s anglickou slaninou, celerové hranolky, zakysaná smetana</td><td class="menuPrice">189,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramborové noky ve smetaně s parmskou šunkou, pórkem a rukolou, strouhaný parmazán</td><td class="menuPrice">164,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Smažené řízky z kuřecích prsou, bramborová kaše s máslem, citron</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight">300g</td><td class="menuName">Steak z vepřové kotlety bez kosti na jemné pepřové omáčce se sázeným vejcem,smažené bramborové plátky</td><td class="menuPrice">210,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový kus-kus, filírovaná vepřová panenka, česnekový dip</td><td class="menuPrice">162,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00., můžeš využít insta slevu na tato jídla: 150g Smažený sýr za 139,- nebo 150g  Mix gril za 139,-  (pro nesledující za 184,-Kč) Musíš si pouze o tuto cenu říct a prokázat sledován našeho instagramu na telefonu </td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Mix gril z vepřové panenky, kuřecích prsou, vepřové pečeně a klobásky s cibulí, smažené plátky brambor, volské oko</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše dezerty</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Odnes si domů plechovková piva za super ceny. Staropramen 10° za 14,-Kč. Staropramen 11° za 16,- Kč a Staropramen 12° za 18,-Kč.  </td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5</td><td class="menuName">Nové pivo od Staropramenu - Premiant extrachmel ležák, IBU 35, alk. 4,5% </td><td class="menuPrice">52,.</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Tanková 11° ležák alk. 4,7%  spodně kvašené - pivovar Staropramen</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Arnoštová hořká 10° alk. 4,3%  spodně kvašené - pivovar ,,Pardubice´´</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Muflon 13° Red ALE alk. 5,4% - svrchně kvašené pivo</td><td class="menuPrice">59,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Šenkýrna střik (0,2l Zweigeltrebe rose / 0,3l sodovka s ledem)  </td><td class="menuPrice">72,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">72,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">0,3L Bezinková limonáda 27,-      0,5L Bezinková limonáda 34,-</td><td class="menuPrice"></td></tr></tbody>
+<h5 class="border_box_title">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </h5><tr><td class="menuWeight">insta gram</td><td class="menuName">Každý den od 15:00 do 19:00., můžeš využít insta slevu na tato jídla: 150g Smažený sýr za 139,- nebo 150g  Mix gril za 139,-  (pro nesledující za 184,-Kč) Musíš si pouze o tuto cenu říct a prokázat sledován našeho instagramu na telefonu</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Mix gril z vepřové panenky, kuřecích prsou, vepřové pečeně a klobásky s cibulí, smažené plátky brambor, volské oko</td><td class="menuPrice">139,-/184,-</td></tr></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">Naše dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">55,-</td></tr></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">Dnes na čepu</h5><tr><td class="menuWeight">0,5l</td><td class="menuName">Oslav s námi 20-ti leté výročí spolupráce s pivovarem Staropramen bezkonkurenčními cenami plechovkových piv. Ceny od 12,90 do 15,90 jsou platné 9.12. - 29.12.2024</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5</td><td class="menuName">Nové pivo od Staropramenu - Premiant extrachmel ležák, IBU 35, alk. 4,5% </td><td class="menuPrice">52,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Tanková 11° ležák alk. 4,7%  spodně kvašené - pivovar Staropramen</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Arnoštová hořká 10° alk. 4,3%  spodně kvašené - pivovar ,,Pardubice´´</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Muflon 13° Red ALE alk. 5,4% - svrchně kvašené pivo</td><td class="menuPrice">59,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Šenkýrna střik (0,2l Zweigeltrebe rose / 0,3l sodovka s ledem)  </td><td class="menuPrice">72,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">72,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">0,3L Citronáda      0,5L Citronáda</td><td class="menuPrice">27,-/ 37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Pokrmy obsahují alergeny. Informace o výskytu konkrétních alergenů v pokrmu žádejte u obsluhy</td><td class="menuPrice"></td></tr></tbody></table></table>
@@ -24,12 +30,16 @@
 <td>
 <div class="row denni-menu" style="max-width:100%; margin:auto; margin-top:70px;">
 <div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2" style="padding:0px;"><img height="auto" src="https://mattesrestaurace.cz/img/vikend3.jpg?id=4" width="auto"/></div>
-<div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/>
-<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer0_a.js?v=" + Date.now() + "'><\/script>");</script>
-<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer1_a.js?v=" + Date.now() + "'><\/script>");</script></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
+<div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
   position: relative;
   top: -100px; 
-  visibility: hidden;"></a><br/><table class="dm"></table><br/></div></div>
+  visibility: hidden;"></a><br/><table class="dm"></table><br/><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
+Volba Sládků<br>
+Kozel tmavý<br>
+Cider Kingswood<br>
+<br>
+Letní zahrada<br>
+Vytápěna zimní zahrada</p><center>--></div></div></div>
 </td>
 </tr>
 </table>
@@ -39,9 +49,34 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–13:30</em></div>
-<div class="nadpis">Neděle 8.12.2024 </div>
+<div class="nadpis">Pondělí 9.12.2024 </div>
 <ul>
-<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
+<span class="popup-gallery"><li class="polevka">
+<div class="polozka">Chřestový krém se zeleným hráškem  1, 7</div>
+<div class="cena">40 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>200g Kuřecí steak zapečený modrým sýrem se sýrovým přelivem, rýže Basmati 1, 7</div>
+<div class="cena">175 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>200g Medailonky z vepřové panenky s hříbkovým přelivem, krokety 1, 7</div>
+<div class="cena">185 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>150g Grilovaný losos na barevném pepři, brokolice na másle, šťouchané brambory s pórkem 4, 7</div>
+<div class="cena">195 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">4. </span>350g Halušky s brynzou, pažitkou a cibulkou 1, 3</div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+</span> </ul>
 </div>
 </td>
 </tr>
@@ -52,9 +87,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Neděle 8.12.2024 </div>
+<div class="nadpis">Pondělí 9.12.2024 </div>
 <ul>
-<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -75,8 +110,102 @@ None
 <div class="inner">
 <h4 class="headline">POLEDNÍ MENU</h4>
 <div class="bookmarks cond">
+<div class="item js-bookmark active">
+<a class="link js-bookmark-switcher" href="#day_23865">Pondělí 09. 12.</a>
 </div>
-<p class="no-meals">Každý pracovní den je pro vás v naší Šalandě nachystáno polední menu. Ne vždy ho ale stačíme nahrát na web.</p>
+</div>
+<table class="list js-bookmark-block" id="day_23865" style="display:table;">
+<tr>
+<td class="volume"></td>
+<td class="name">
+<span class="title cond">Hráškový krém </span>
+<span class="allergen">(A: 1, 3, 7)</span>
+<p class="desc">s krutony </p>
+</td>
+<td class="price cond">
+        49 Kč    </td>
+</tr>
+<tr>
+<td class="volume"></td>
+<td class="name">
+<span class="title cond">Hovězí vývar </span>
+<span class="allergen">(A: 1, 3, 7, 9)</span>
+<p class="desc">s játrovými knedlíčky</p>
+</td>
+<td class="price cond">
+        49 Kč    </td>
+</tr>
+<tr>
+<td class="volume">150g</td>
+<td class="name">
+<span class="title cond">Kuřecí stehenní steak caprese</span>
+<span class="allergen">(A: 1, 7, 8, 12)</span>
+<p class="desc">s hranolky</p>
+</td>
+<td class="price cond">
+        159 Kč    </td>
+</tr>
+<tr>
+<td class="volume">150g</td>
+<td class="name">
+<span class="title cond">Hovězí svíčková na smetaně</span>
+<span class="allergen">(A: 1, 3, 7, 9, 10)</span>
+<p class="desc">s houskovým knedlíkem, brusinkový terč </p>
+</td>
+<td class="price cond">
+        179 Kč    </td>
+</tr>
+<tr>
+<td class="volume">150g</td>
+<td class="name">
+<span class="title cond">Medailonky z vepřové panenky </span>
+<span class="allergen">(A: 1, 7, 12)</span>
+<p class="desc">s rokforovým přelivem, šťouchaný cibulový brambor </p>
+</td>
+<td class="price cond">
+        179 Kč    </td>
+</tr>
+<tr>
+<td class="volume">300g</td>
+<td class="name">
+<span class="title cond">Tagliatelle s lososem </span>
+<span class="allergen">(A: 1, 3, 4, 7)</span>
+<p class="desc">a smetanovo-bylinkovou omáčkou</p>
+</td>
+<td class="price cond">
+        169 Kč    </td>
+</tr>
+<tr>
+<td class="volume">150g</td>
+<td class="name">
+<span class="title cond">Thajská kuřecí směs </span>
+<span class="allergen">(A: 1, 4, 6, 9, 11)</span>
+<p class="desc">s rýží</p>
+</td>
+<td class="price cond">
+        169 Kč    </td>
+</tr>
+<tr>
+<td class="volume">200g</td>
+<td class="name">
+<span class="title cond">MIX GRILL</span>
+<span class="allergen">(A: 1, 7, 12)</span>
+<p class="desc">(kuřecí stehenní steak a vepřová krkovice) kukuřičný klas, opečené brambory a jalapeños majonéza </p>
+</td>
+<td class="price cond">
+        189 Kč    </td>
+</tr>
+<tr>
+<td class="volume">200g</td>
+<td class="name">
+<span class="title cond">RUMP steak </span>
+<span class="allergen">(A: 1, 7, 12)</span>
+<p class="desc">s pepřovou omáčkou, hranolky </p>
+</td>
+<td class="price cond">
+        219 Kč    </td>
+</tr>
+</table>
 </div>
 </section>
 </td>
